2.0.2:
- Fixed a bug where the storage card module wouldn't always get recognized by the processor

2.0.1:
- Fixed a bug where oredictionary matching was broken for 'get_ingredients_smart'
- Fixed a problem with the item tooltip in the crafting station
- The 'eval_item' opcode will no longer give an error if it returns an empty item. An empty item is valid too

2.0.0:
- Depends on McJtyLib 3.5.0!
- Fixed dropping liquid buckets in the fluid opcodes
- Small improvement on error logging. The index of the program card that is causing the error is now also printed
- There was a chance that a programmer would not correctly save its current program on exit. Loading the world again would revert to an older program. This has now been fixed
- If the programmer gets a redstone signal it will save the current program to the card. This allows automation to save a program to many cards
- New opcode ('eval_countcrafts') to count the possible number of crafting operations given a card and an inventory
- New opcode ('do_vector_sort') to sort a vector
- New opcode ('eval_vector_indices') to generate a vector of integers starting with 0
- Converting a vector to a string will now give a short summary of its contents instead of just []
- New 'length' function which is a more convenient way to calculate the length of a string or vector
- The 'do_getingredients_smart' and 'do_getingredients' opcodes now have optional 'oredict' parameters so that you can enable oredictionary support for checking ingredients
- New 'watch' commands that can help debug a program by watching when a variable changes. You can then log that change or set the program in debug mode
- Added new 'comment' opcode that acts like a wire but has the extra ability to attach three comment lines. This makes it easier to document your programs
- New 'test_eq_item' opcode which is a more flexible way to test for item equality. It can optionally use metadata, NBT, and oredictionary to do the equality test