@@ -297,6 +297,11 @@ public interface IProcessor {
     ItemStack getCraftResult(IProgram program);
 
     /**
+     * Find a crafting card that can produce the given item in an inventory
+     */
+    ItemStack findCraftingCard(IProgram program, Inventory inventory, ItemStack stack, boolean oredict);
+
+    /**
      * Send a message to another processor identified by the network identifier item
      * that is in idSlot. Can optionally send a variable to that processor.
      */
